# mcp-jira-confluence-sse

./: .env.example  .gitignore  AUTHENTICATION.md  Dockerfile  README-SSE.md  SSE_MIGRATION_GUIDE.md  config-sse-auth.json  config-sse.json  config-stdio.json  docker-compose.yml  pyproject.toml  start_sse.py  start_sse.sh  test_scripts.sh
src/mcp_jira_confluence/: __init__.py  run_sse.py  sse_client.py  sse_server.py
